--- a/index.html
+++ b/index.html
@@ -50,20 +50,17 @@
         <div class="feature-col">
             <a href="approach.html"><img src="images/aproach.jpeg"></a><br><br>
             <h4>Our Approach</h4>
-            <p>Texto para rellenar hola hola hola fernando 
-                busta</p>
+            <p>Our Approach</p>
         </div>
         <div class="feature-col">
             <a href="services.html"><img src="images/services.jpeg"></a><br><br>
             <h4>Our Services</h4>
-            <p>Texto para rellenar hola hola hola fernando 
-                busta</p>
+            <p>Our Services</p>
         </div>
         <div class="feature-col">
             <a href="work.html"><img src="images/work.jpeg"></a><br><br>
             <h4>Our Work</h4>
-            <p>Texto para rellenar hola hola hola fernando 
-                busta</p>
+            <p>Our Work</p>
         </div>
     </div>
 </section>
@@ -218,7 +215,7 @@
         <div class="footer-right-col">
             <div class="footer-info">
                 <div class="copyright-text">
-                    <small>email@email.com</small><br>
+                    <small>infobiz@bizimagine.com</small><br>
                     <small>copyright 2022 BIZimagine</small>
                 </div>
                 <div class="footer-logo">
