--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="footer-right-col">
             <div class="footer-info">
                 <div class="copyright-text">
-                    <small>infobiz@bizimagine.com</small><br>
+                    <small>info@bizimagine.com</small><br>
                     <small>copyright 2022 BIZimagine</small>
                 </div>
                 <div class="footer-logo">
