Changing email from all files

--- a/work.html
+++ b/work.html
@@ -179,7 +179,7 @@
         <div class="footer-right-col">
             <div class="footer-info">
                 <div class="copyright-text">
-                    <small>email@email.com</small><br>
+                    <small>info@bizimagine.com</small><br>
                     <small>copyright 2022 BIZimagine</small>
                 </div>
                 <div class="footer-logo">
